dark mode context fix

--- a/src/layouts/Main/Main.scss
+++ b/src/layouts/Main/Main.scss
@@ -102,6 +102,7 @@
 
 .sidemenu__item {
   padding-bottom: px_rem(16px);
+  color: var(--text-primary);
 }
 
 .img {
