--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -1,4 +1,5 @@
 //COLORS
+#root,
 [data-theme="light"] {
   --background: #fff;
   --bgtop: #616cd0;
@@ -10,7 +11,7 @@
   --background: #292929;
   --bgtop: #616cd0;
   --text-primary: #fff;
-  --text-secondary: #0000f7;
+  --text-secondary: ##6b8afd;
   --accent: #f97d36;
 }
 
